# bench_precompiles

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  generate_all.sh  run_blake2f_meter.sh  run_bn_add_meter.sh  run_bn_mul_meter.sh  run_bn_pairing_estimate.sh  run_bn_pairing_meter.sh  run_ecrecover_estimate.sh  run_keccak_sponge_meter.sh  run_ripemd160_meter.sh  run_sha256_generator.sh  run_sha256_go.sh  run_sha256_meter.sh  sha256_test.sh  try_all.sh
src/: generator.rs  helpers.rs  input_generators.rs  lib.rs  measurements.rs  pricers.rs  runners.rs  serialization.rs
vectors/: common-blake2f.json  common-bnadd.json  common-bnmul.json  common-bnpair.json  common-ripemd.json  common-sha256.json
vectors/ripemd/current/: input_param_scalar_0_gas_600.csv  input_param_scalar_104_gas_1080.csv  input_param_scalar_112_gas_1080.csv  input_param_scalar_128_gas_1080.csv  input_param_scalar_160_gas_1200.csv  input_param_scalar_16_gas_720.csv  input_param_scalar_176_gas_1320.csv  input_param_scalar_184_gas_1320.csv  input_param_scalar_208_gas_1440.csv  input_param_scalar_216_gas_1440.csv  input_param_scalar_224_gas_1440.csv  input_param_scalar_240_gas_1560.csv  input_param_scalar_24_gas_720.csv  input_param_scalar_40_gas_840.csv  input_param_scalar_64_gas_840.csv  input_param_scalar_96_gas_960.csv
vectors/ripemd/proposed/: input_param_scalar_120_gas_42.csv  input_param_scalar_136_gas_42.csv  input_param_scalar_144_gas_42.csv  input_param_scalar_152_gas_42.csv  input_param_scalar_168_gas_42.csv  input_param_scalar_192_gas_54.csv  input_param_scalar_200_gas_54.csv  (+10 more)
(+1 files in other folders)
