[package]
name = "bench_precompiles"
version = "0.1.0"
authors = ["Alex Vlasov <alex.m.vlasov@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3"
num-bigint = "0.2"
num-traits = "0.2"
num-integer = "0.1"
hex = "0.4"
rand = "0.7"
rand_xorshift = "0.2"
pbr = "*"
bn = { git = "https://github.com/paritytech/bn", default-features = false }
rayon = "1.*"
indicatif = {version = "*", features = ["with_rayon"]}
parity-crypto = {version = "0.6", features = ["publickey"]}
ethereum-types = "0.9"
keccak-hash = "0.5"
eip-152 = {path = "./EIP-152"}
csv = "*"
colored = "*"